feat: add documentation, Wordle4j-Net console version 1.0.0